Minor test improvements